# AuroraMind

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202411231200_create_users_table.py  202411300101_add_timezone_to_timestamps.py  202411300200_create_task_tables.py  202411300300_add_goals_and_link_task_lists.py  202412020001_remove_phase_description.py  202412070001_add_knowledge_tables.py  202412150001_make_task_dates_nullable.py  202512150001_add_knowledge_ingestion_progress_fields.py  202512150002_add_pgvector_index_knowledge_chunks_embedding.py  202512150003_add_goal_id_to_knowledge_documents.py  202512150004_merge_heads_202412150001_and_202512150003.py  202512160001_add_summaries_and_task_completed_at.py  202512160002_add_summary_period_fields.py
backend/app/: main.py
backend/app/core/: cache.py  celery_app.py  config.py  db.py  security.py
backend/app/models/: __init__.py  base.py  goal.py  knowledge_chunk.py  knowledge_document.py  phase.py  phase_task.py  summary.py  task.py  task_list.py  user.py
backend/app/schemas/: breakdown.py  common.py  goal.py  knowledge.py  phase.py  phase_task.py  summary.py  task.py  task_list.py  user.py
backend/app/services/: ai_service.py  cache_service.py  embedding_service.py  goal_service.py  knowledge_ingestion_utils.py  knowledge_service.py  phase_service.py  summary_service.py  task_service.py  user_service.py
backend/scripts/: seed_test_data.py
(+49 files in other folders)
